--- a/src/scss/portalManagement/add-and-clear-portals.scss
+++ b/src/scss/portalManagement/add-and-clear-portals.scss
@@ -2,6 +2,7 @@
   width: 100%;
 
   display: grid;
+  grid-template-columns: 1fr 1fr;
   grid-template-areas:
     "textarea textarea"
     "load     clear";
