feat: Improve layout.

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,12 +11,20 @@ body {
   height: 100vh;
 
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   grid-template-areas: "input map";
 }
 
 .input-pane {
   grid-area: input;
+
+  display: flex;
+  flex-direction: column;
+
+  > * {
+    padding: 8px;
+    margin-bottom: 16px;
+  }
 }
 
 .map-pane {
