--- a/src/scss/portalManagement/selection.scss
+++ b/src/scss/portalManagement/selection.scss
@@ -1,6 +1,28 @@
 .selection {
-  display: flex;
-  flex-direction: column;
+  table {
+    width: 100%;
+  }
+
+  &__row-buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "first up down";
+    justify-items: center;
+  }
+
+  &__row-button {
+    cursor: pointer;
+
+    &-first {
+      grid-area: first;
+    }
+    &-up {
+      grid-area: up;
+    }
+    &-down {
+      grid-area: down;
+    }
+  }
 
   &__buttons {
     display: grid;
